lim-project/force-app/main/default/objects/LinkedIn_AP_NC_Settings__c/LinkedIn_AP_NC_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to store information about the Auth Provider and Named Credentials for Linked In Manager for each user.</description>
    <label>LinkedIn AP &amp; NC Settings</label>
</CustomObject>