lim-project/force-app/main/default/objects/LinkedIn_AP_NC_Settings__c/fields/AP_Created__c.field-meta.xml
<CustomField>
    <fullName>AP_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP Created</label>
    <type>Checkbox</type>
</CustomField>