lim-project/force-app/main/default/objects/LinkedIn_AP_NC_Settings__c/fields/AP_Name__c.field-meta.xml
<CustomField>
    <fullName>AP_Name__c</fullName>
    <label>AP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>