lim-project/force-app/main/default/objects/LinkedIn_AP_NC_Settings__c/fields/Marketing_Developer_Product__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Developer_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Developer Product</label>
    <type>Checkbox</type>
</CustomField>