lim-project/force-app/main/default/objects/LinkedIn_AP_NC_Settings__c/fields/NC_Name__c.field-meta.xml
<CustomField>
    <fullName>NC_Name__c</fullName>
    <label>NC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>