lim-project/force-app/main/default/objects/LinkedIn_AP_NC_Settings__c/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <label>Scopes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>